# airflow_spark_project_datawarehouse_nybike

./: .env  .gitignore  LICENSE  README.md  bash_note.md  docker-compose.yml  docker-compose_v2.yml  hello.py  insert_customers.sql  insert_orders.sql  pyproject.toml  test_noteboook.ipynb  test_noteboook_test_test.ipynb
.bsp/: scala-cli.json
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: airflow_spark_project_datawarehouse_nybike_dfcb79a7c1-test.json  airflow_spark_project_datawarehouse_nybike_dfcb79a7c1.json
base_images_services/airflow/: Dockerfile
base_images_services/jupyter_spark/: Dockerfile
base_images_services/minio/: Dockerfile
base_images_services/pgadmin4/: Dockerfile
base_images_services/postgres/: Dockerfile
base_images_services/spark-iceberg-with-worker/: Dockerfile  entrypoint.sh  requirements.txt
base_images_services/spark_base/: Dockerfile
base_images_services/spark_iceberg_base/: Dockerfile
base_images_services/spark_notebook/: Dockerfile  ivysettings.xml  requirements.txt  spark-defaults.conf  start-spark.sh  start.sh
base_images_services/ubuntu/: Dockerfile
dags/: dag_dynimic_etl.py  dag_dynimic_etl_copy.py  dag_elt_bronze.py
docs_project/: DataFlow_Management.drawio  Datawarehouse_nybike.drawio
notebooks/: test_pyspark.ipynb
notebooks/.ipynb_checkpoints/: config-checkpoint.yaml  test_pyspark-checkpoint.ipynb
notebooks_test/: Untitled.ipynb  Untitled1.ipynb  config.yaml  test_etl_nc_bike.ipynb  test_nessie_spark.ipynb  test_pyspark.ipynb
(+73 files in other folders)
